--- a/src/ArtworkGallery/ArtworkGallery.csproj
+++ b/src/ArtworkGallery/ArtworkGallery.csproj
@@ -93,6 +93,7 @@
     <Content Include="Fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Images\bone-50.jpg" />
+    <Content Include="Images\paris-opera-house-pencil.jpg" />
     <Content Include="Images\the-amazing-spider-man-657.jpg" />
     <Content Include="Images\the-amazing-spider-man-700.jpg" />
     <Content Include="Scripts\bootstrap.min.js" />
